# Super-Store-Data-Analysis-Project

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  README.md  SuperStore Data Analysis Project.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
.streamlit/: config.toml
dashboard/: app.py
data/: README.md  superstore_sales.csv
kaggle/: SuperStore_Sales_Analysis_Kaggle.ipynb
notebooks/: SuperStore_Sales_Analysis.ipynb
reports/: metrics.json  rfm_customer_segments.csv  subcategory_profitability.csv
scripts/: run_analysis.py
superstore/: __init__.py  data.py  forecast.py
tests/: conftest.py  test_data.py  test_forecast.py
