[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "superstore-analysis"
version = "1.0.0"
description = "Data cleaning, forecasting and metrics logic for the SuperStore Sales & Profitability Analysis project"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Subhranshu Panda" }]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "statsmodels>=0.14",
]

[project.urls]
Repository = "https://github.com/SubhranshuPan/Super-Store-Data-Analysis-Project"

[tool.setuptools]
packages = ["superstore"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 125
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402"]  # notebooks/scripts insert repo root onto sys.path before importing superstore

[tool.ruff.lint.per-file-ignores]
"dashboard/app.py" = ["E402"]
"scripts/run_analysis.py" = ["E402"]
